--- a/index - Copy.html
+++ b/index - Copy.html
@@ -27,11 +27,11 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="#services">Assignments</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#portfolio">Conversion</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#about">Income Tax Calculator</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#team">Factorial</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#contact">Simple Payroll</a></li>
+                        <li class="nav-item"><a class="nav-link" href="index%20-%20Copy.html">Assignments</a></li>
+                        <li class="nav-item"><a class="nav-link" href="Conversion.html">Conversion</a></li>
+                        <li class="nav-item"><a class="nav-link" href="Income%20Tax%20Calculator.html">Income Tax Calculator</a></li>
+                        <li class="nav-item"><a class="nav-link" href="Factorial.html">Number Calculator</a></li>
+                        <li class="nav-item"><a class="nav-link" href="Simple%20Pay%20Roll.html">Simple Payroll</a></li>
                     </ul>
                 </div>
             </div>
@@ -100,8 +100,8 @@
                     </a>
 
                         </>
-                        <h4 class="my-3">#3 Factorial</h4>
-                        <p class="text-muted">Computes the factorial of numbers.</p>
+                        <h4 class="my-3">#3 Number Calculator</h4>
+                        <p class="text-muted">Computes the factorial, sum, average of numbers.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
