--- a/Simple Pay Roll.html
+++ b/Simple Pay Roll.html
@@ -37,7 +37,7 @@
             </div>
         </nav>
         <!-- Masthead-->
-        <body style="background-color: coral;">
+        <body style="background-color: rgba(126, 98, 33, 0.97);">
   <h1></h1>
 </body>
 
