--- a/Number Calculator.html
+++ b/Number Calculator.html
@@ -58,7 +58,7 @@
     
                        
 <body>
-  <h3>Loop-Based Calculator</h3>
+  <h3>Number Calculator</h3>
 <style>
   input, select, button {
     display: block;      /* makes them stack vertically */
@@ -109,9 +109,9 @@
         let avg = total / n;
 
         output = `
-          Factorial (While Loop): ${fact} <br>
-          Sum (Do While Loop): ${sum} <br>
-          Average (For Loop): ${avg.toFixed(2)}
+          Factorial: ${fact} <br>
+          Sum: ${sum} <br>
+          Average: ${avg.toFixed(2)}
         `;
       }
 
