--- a/index - Copy.html
+++ b/index - Copy.html
@@ -30,7 +30,7 @@
                         <li class="nav-item"><a class="nav-link" href="index%20-%20Copy.html">Assignments</a></li>
                         <li class="nav-item"><a class="nav-link" href="Conversion.html">Conversion</a></li>
                         <li class="nav-item"><a class="nav-link" href="Income%20Tax%20Calculator.html">Income Tax Calculator</a></li>
-                        <li class="nav-item"><a class="nav-link" href="Factorial.html">Number Calculator</a></li>
+                        <li class="nav-item"><a class="nav-link" href="Number%20Calculator.html">Number Calculator</a></li>
                         <li class="nav-item"><a class="nav-link" href="Simple%20Pay%20Roll.html">Simple Payroll</a></li>
                     </ul>
                 </div>
