Update index - Copy.html

--- a/index - Copy.html
+++ b/index - Copy.html
@@ -86,7 +86,7 @@
                         <p class="text-muted">Computes the tax of a Filipino's income.</p>
                     </div>
                 <div class="col-md-4">
-     <a href="Factorial.html">
+     <a href="Number%20Calculator.html">
                          <svg
   xmlns="http://www.w3.org/2000/svg"
   width="101"
